@@ -1,3 +1,8 @@
+2014-03-21 Marco Randazzo <marco.randazzo@iit.it>
+    * src/libYARP_dev/src/RemoteControlBoard.cpp
+	* src/libYARP_dev/src/modules/ControlBoardWrapper/ControlBoardWrapper.cpp
+	fixed missing kff parameter in pid structure
+	
 2014-01-31 Matteo Brunettini  <matteo.brunettini@iit.it>
     * tagging version 2.3.61
 
